# codinit

./: .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  mkdocs.yml  pyproject.toml
backend/configs/: agents.yaml  documentation.yaml  embeddings.yaml  eval.yaml  models.yaml
backend/docs/: code_parsing.md  diagrams.md  documentation_scraping.md  experiment_tracking.md  openai_helpers.md
backend/src/codinit/: agents.py  app.py  base_models.py  code_editor.py  codebaseKG.py  config.py  doc_schema.py  get_context_.py  main.py  prompts.py  pydantic_models.py  queries.py  schemas.py  task_executor.py  utils.py  weaviate_client.py  weaviate_utils.py
backend/src/codinit/checks/: check_import_existence.py  check_reference_existence.py  get_imports.py  typing_linting_flake.py
backend/src/codinit/documentation/: apify_webscraper.py  chunk_documents.py  doc_schema.py  get_context.py  get_context_.py  pydantic_models.py  save_data.py  save_document.py
backend/src/codinit/experiment_tracking/: experiment_dashboard.py  experiment_logger.py  experiment_pydantic_models.py  json_experiment_rw.py
backend/src/codinit/tools/: weaviate_query_tool.py
backend/src/codinit/visualization/: visualize_run_metrics.py
backend/tests/: conftest.py  instructions.md  test_codebaseKG.py
backend/tests/documentation/: conftest.py  test_BaseWeaviateDocClient.py  test_WeaviateDocQuerier.py  test_apify_scraper.py  test_chunk_document.py  test_save_data.py  test_save_document.py
frontend/: package.json
frontend/app/: page.tsx
frontend/codinit/app/: globals.css  page.tsx
